[gd_scene load_steps=15 format=3 uid="uid://dd18nnqadvu7y"]

[ext_resource type="Texture2D" uid="uid://bds3megmrlpt2" path="res://assets/sprites/mario_world/items/pipe/pipe_top_green_vertical.png" id="1_1gkae"]
[ext_resource type="Script" path="res://scripts/world_element/teleport_pipe.gd" id="1_sdx3n"]
[ext_resource type="Texture2D" uid="uid://btq5wsjrhie8g" path="res://assets/sprites/mario_world/items/pipe/pipe_body_green_vertical.png" id="2_wg4hp"]
[ext_resource type="Texture2D" uid="uid://cfugx4iyutcmx" path="res://assets/sprites/mario_world/items/pipe/traffic_sign_sheet.png" id="3_88khn"]
[ext_resource type="Texture2D" uid="uid://lhmhu2bsncph" path="res://assets/sprites/mario_world/items/pipe/traffic_sign.png" id="5_gqocr"]

[sub_resource type="AtlasTexture" id="AtlasTexture_1okv5"]
atlas = ExtResource("3_88khn")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_u02kh"]
atlas = ExtResource("3_88khn")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_uid1r"]
atlas = ExtResource("3_88khn")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_10cxa"]
atlas = ExtResource("3_88khn")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_o60mk"]
atlas = ExtResource("3_88khn")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_53f48"]
atlas = ExtResource("3_88khn")
region = Rect2(320, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_rb07d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_gqocr")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_1okv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u02kh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uid1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_10cxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o60mk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_53f48")
}],
"loop": true,
"name": &"light_arrows",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q4jnp"]
size = Vector2(32, 43)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nfc6s"]
size = Vector2(22, 9)

[node name="TeleportPipe" type="StaticBody2D"]
script = ExtResource("1_sdx3n")

[node name="trafficSignAnimation" type="AnimatedSprite2D" parent="."]
position = Vector2(13, -1)
scale = Vector2(0.439063, 0.439063)
sprite_frames = SubResource("SpriteFrames_rb07d")

[node name="trafficSignSprite" type="Sprite2D" parent="."]

[node name="pipeBodySprite" type="Sprite2D" parent="."]
position = Vector2(0, -21)
texture = ExtResource("2_wg4hp")
offset = Vector2(0, 32)
region_enabled = true
region_rect = Rect2(0, 0, 32, 32)

[node name="pipeTopSprite" type="Sprite2D" parent="."]
texture = ExtResource("1_1gkae")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 5.5)
shape = SubResource("RectangleShape2D_q4jnp")

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 384)
collide_with_areas = true

[node name="pipeArea2D" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="enterPipeCollisionShape" type="CollisionShape2D" parent="pipeArea2D"]
position = Vector2(0, -12.5)
shape = SubResource("RectangleShape2D_nfc6s")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true
autostart = true

[connection signal="body_entered" from="pipeArea2D" to="." method="_on_pipe_area_2d_body_entered"]
[connection signal="body_exited" from="pipeArea2D" to="." method="_on_pipe_area_2d_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
